[package]
name = "aaa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
aws-config = "1.5"
aws-credential-types = "1.2"
aws-types = "1.3"
aws-sdk-sso = "1.52"
aws-sdk-ssooidc = "1.52"
aws-sdk-sts = "1.53"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
inquire = "0.7"
