[package]
name = "aaa"
version = "0.1.0"
edition = "2021"
authors = ["manoelhc"]
description = "AWS Account Alternator - A Rust CLI tool that simplifies AWS profile management and authentication"
license = "MIT"
repository = "https://github.com/manoelhc/aaa"
homepage = "https://github.com/manoelhc/aaa"
readme = "README.md"
keywords = ["aws", "cli", "sso", "okta", "credentials"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "manoelhc"
copyright = "2024, manoelhc"
license-file = ["LICENSE", "0"]
extended-description = """\
A Rust CLI tool that simplifies AWS profile management and authentication. \
It supports standard AWS credentials, AWS SSO authentication, and Okta \
authentication via okta-aws-cli, with an interactive menu for easy profile \
selection and creation."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/aaa", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/aaa/", "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
assets = [
  { source = "target/release/aaa", dest = "/usr/bin/aaa", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/aaa/README.md", mode = "644" },
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
aws-config = "1.5"
aws-credential-types = "1.2"
aws-types = "1.3"
aws-sdk-sso = "1.52"
aws-sdk-ssooidc = "1.52"
aws-sdk-sts = "1.53"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
inquire = "0.7"
